add group project

--- a/index.html
+++ b/index.html
@@ -52,32 +52,32 @@
                 <section class="page-section" id="work">
                     
                     <div class="grid-container">
-                      <a href="https://jamiedelange.github.io/run-buddy/" class="grid-item surf-report">
+                      <a id="card1" href="https://jamiedelange.github.io/run-buddy/" class="grid-item surf-report">
                         <div>
                           <h3>Run Buddy</h3>
                           <span>HTML/CSS</span>
                           
                         </div>
                       </a>
-                      <a href="#" class="grid-item led-wall">
+                      <a id="card2" href="https://kohringsw.github.io/hike-now/" class="grid-item led-wall">
                         <div>
-                          <h3>LED Wall</h3>
-                          <span>Node/IoT</span>
+                          <h3>Hike Now</h3>
+                          <span>jQuery/JS/APIs</span>
                         </div>
                       </a>
-                      <a href="#" class="grid-item react-calc">
+                      <a id="card3" href="https://jamiedelange.github.io/weather-boss-3000/" class="grid-item react-calc">
                         <div>
-                          <h3>Calculator</h3>
-                          <span>React/JavaScript/CSS</span>
+                          <h3>Weather Boss 3000</h3>
+                          <span>JS/HTML/CSS/APIs</span>
                         </div>
                       </a>
-                      <a href="#" class="grid-item pastel-puzzles">
+                      <a id="card4" href="#" class="grid-item pastel-puzzles">
                         <div>
                           <h3>Pastel Puzzels</h3>
                           <span>MERN Stack</span>
                         </div>
                       </a>
-                      <a href="#" class="grid-item run-buddy">
+                      <a  id="card5" href="#" class="grid-item run-buddy">
                         <div>
                           <h3>Surf Report</h3>
                           <span>MERN Stack</span>
